deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vmh-client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vmh-client
  template:
    metadata:
      labels:
        app: vmh-client
    spec:
      containers:
      - name: vmh-client
        image: viciousmockeryhelper_client:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 80
