deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app-sevice: da-client-service
  name: da-client-service
spec:
  type: ClusterIP
  ports:
  - name: service-port-name
    port: 80
    protocol: TCP
  selector:
    app: da-client
