deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-wildcard-host
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: vmh.localhost
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: vmh-client-clusterip
            port:
              number: 80
